<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".TambahAnggota">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masukkan_data"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/brown" />

            <!-- Name Field -->
            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:hint="@string/nama"
                android:background="@drawable/custom_edittext"
                android:importantForAutofill="no"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Address Field -->
            <EditText
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:hint="@string/alamat"
                android:background="@drawable/custom_edittext"
                android:importantForAutofill="no"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Email Field -->
            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:background="@drawable/custom_edittext"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Age Field -->
            <EditText
                android:id="@+id/inputAge"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:hint="@string/usia"
                android:inputType="number"
                android:background="@drawable/custom_edittext"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Save Button -->
            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/simpan"
                android:textSize="18sp"
                app:cornerRadius="15dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/brown"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
