<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/mountain_background"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/brown" />

            <!-- Name -->
            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:hint="@string/nama"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <!-- Username -->
            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <!-- Email -->
            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:padding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <!-- Password -->
            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <!-- Confirm Password -->
            <EditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:padding="8dp"
                android:hint="@string/konfirmasi_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/register"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/brown"
                app:cornerRadius="15dp" />

            <!-- Redirect to Login -->
            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun_login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/brown"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
