<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/mountain_background"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/custom_edittext"
            tools:ignore="ExtraText">

            <!-- Login Title -->
            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/brown" />

            <!-- Email or Username Input -->
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/email_atau_username"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <!-- Password Input -->
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <!-- Login Button -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/brown"
                app:cornerRadius="15dp" />

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:text="@string/lupa_password"
                android:textColor="@color/brown"
                android:textSize="14sp" />

            <!-- Google Sign-In Button -->
            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                android:padding="0dp" />

            <!-- Sign Up Redirect -->
            <TextView
                android:id="@+id/signUpRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:text="@string/belum_punya_akun_register"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
